frontend/src/tailwind.css
/* ... */
.fancybox__container .f-button.is-prev,
.fancybox__container .f-button[data-carousel-go-prev] {
  left: 16px !important;
}

.fancybox__container .f-button.is-next,
.fancybox__container .f-button[data-carousel-go-next] {
  right: 16px !important;
}

/* 箭頭按鈕 Hover: 向右下壓 */
.fancybox__container .f-button.is-prev:hover,
.fancybox__container .f-button.is-next:hover,
.fancybox__container .f-button[data-carousel-go-prev]:hover,
.fancybox__container .f-button[data-carousel-go-next]:hover {
  transform: translateY(-50%) translate(4px, 4px) !important;
  box-shadow: 0px 0px 0px #000000 !important; /* 陰影完全消失 */
  background-color: color-mix(in srgb, var(--main) 80%, transparent) !important; /* Hover 半透明主色 */
  color: #000000 !important; /* Hover 圖標：黑色 */
}

/* 箭頭按鈕 Active: 壓到底 */
.fancybox__container .f-button.is-prev:active,
.fancybox__container .f-button.is-next:active,
.fancybox__container .f-button[data-carousel-go-prev]:active,
.fancybox__container .f-button[data-carousel-go-next]:active {
  transform: translateY(-50%) translate(4px, 4px) !important;
  box-shadow: 0px 0px 0px #000000 !important;
}

/* 為了消除工具列相鄰按鈕邊框重疊，讓相鄰的按鈕往左移 */
.fancybox__container .f-carousel__toolbar__column > * + * {
  margin-left: -3px !important; /* 配合 3px 邊框修正 */
}

/* Navigation Arrows */
.fancybox__container .f-button.is-prev::before,
.fancybox__container .f-button[data-carousel-go-prev]::before {
  -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polygon points="17 5 17 7 16 7 16 8 15 8 15 9 14 9 14 10 13 10 13 11 12 11 12 13 13 13 13 14 14 14 14 15 15 15 15 16 16 16 16 17 17 17 17 19 16 19 16 20 14 20 14 19 13 19 13 18 12 18 12 17 11 17 11 16 10 16 10 15 9 15 9 14 8 14 8 13 7 13 7 11 8 11 8 10 9 10 9 9 10 9 10 8 11 8 11 7 12 7 12 6 13 6 13 5 14 5 14 4 16 4 16 5 17 5"/></svg>');
  mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polygon points="17 5 17 7 16 7 16 8 15 8 15 9 14 9 14 10 13 10 13 11 12 11 12 13 13 13 13 14 14 14 14 15 15 15 15 16 16 16 16 17 17 17 17 19 16 19 16 20 14 20 14 19 13 19 13 18 12 18 12 17 11 17 11 16 10 16 10 15 9 15 9 14 8 14 8 13 7 13 7 11 8 11 8 10 9 10 9 9 10 9 10 8 11 8 11 7 12 7 12 6 13 6 13 5 14 5 14 4 16 4 16 5 17 5"/></svg>');
  transform: translate3d(-50%, -50%, 0) !important; /* 取消其他位移 */
}

.fancybox__container .f-button.is-next::before,
.fancybox__container .f-button[data-carousel-go-next]::before {
  -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polygon points="7 19 7 17 8 17 8 16 9 16 9 15 10 15 10 14 11 14 11 13 12 13 12 11 11 11 11 10 10 10 10 9 9 9 9 8 8 8 8 7 7 7 7 5 8 5 8 4 10 4 10 5 11 5 11 6 12 6 12 7 13 7 13 8 14 8 14 9 15 9 15 10 16 10 16 11 17 11 17 13 16 13 16 14 15 14 15 15 14 15 14 16 13 16 13 17 12 17 12 18 11 18 11 19 10 19 10 20 8 20 8 19 7 19"/></svg>');
  mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polygon points="7 19 7 17 8 17 8 16 9 16 9 15 10 15 10 14 11 14 11 13 12 13 12 11 11 11 11 10 10 10 10 9 9 9 9 8 8 8 8 7 7 7 7 5 8 5 8 4 10 4 10 5 11 5 11 6 12 6 12 7 13 7 13 8 14 8 14 9 15 9 15 10 16 10 16 11 17 11 17 13 16 13 16 14 15 14 15 15 14 15 14 16 13 16 13 17 12 17 12 18 11 18 11 19 10 19 10 20 8 20 8 19 7 19"/></svg>');
  transform: translate3d(-50%, -50%, 0) !important; /* 取消其他位移 */
}

/* 針對左右箭頭按鈕單獨設定 top 偏移 */
.fancybox__container .f-button.is-prev::before,
.fancybox__container .f-button.is-next::before,
.fancybox__container .f-button[data-carousel-go-prev]::before,
.fancybox__container .f-button[data-carousel-go-next]::before {
  top: 50% !important; /* 強制覆寫之前殘留的 73% */
  left: 50% !important;
  transform: translate3d(-50%, -50%, 0) !important;
}

/* 強制移除所有 Fancybox 縮圖 (Thumbs) 相關的圓角，以符合 Neobrutalism */
:root {
  --f-thumb-border-radius: 0px !important;
}

.fancybox__container .f-thumbs__slide__button,
.fancybox__container .f-thumbs__slide__img,
.fancybox__container .f-thumbs__slide button,
.fancybox__container .f-thumbs__slide button::after,
.fancybox__container .f-thumbs img {
  border-radius: 0px !important;
}

